button error fix

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_bg1"
+        android:background="@drawable/button1"
         android:textSize="25sp"
         android:fontFamily="@font/cocogoose"
         android:textStyle="bold"
@@ -40,7 +40,7 @@
         android:id="@+id/signUp_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_bg2"
+        android:background="@drawable/button2"
         android:layout_below="@+id/login_btn"
         android:textSize="25sp"
         android:paddingLeft="50dp"
