--- a/app/src/main/res/drawable/button2.xml
+++ b/app/src/main/res/drawable/button2.xml
@@ -1,7 +1,5 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    >
-
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@android:color/white" />
     <stroke
         android:width="2dp"
@@ -13,5 +11,4 @@
     <corners
         android:radius="1000dp">
     </corners>
-
 </shape>
