--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,18 +13,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
+        android:padding="1dp"
         >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"
-            android:fontFamily="@font/cocogoose"
-            android:text="doNeed"
-            android:textColor="#54000000"
-            android:textSize="88sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:fontFamily="@font/cocogoose"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="600dp"
+                android:text="doNeed"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                app:autoSizeTextType="uniform"
+                android:textColor="#54000000"
+                 />
+        </LinearLayout>
+
 
         <androidx.cardview.widget.CardView
 
@@ -35,6 +45,7 @@
             android:layout_marginStart="50dp"
             android:layout_centerHorizontal="true"
             app:cardCornerRadius="38dp"
+            android:paddingBottom="10dp"
             app:cardBackgroundColor="@color/white"
             app:cardElevation="10dp">
 
@@ -54,7 +65,7 @@
                     android:layout_marginTop="30dp"
                     android:textColor="#504E4E" />
 
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/email_field"
                     android:layout_below="@+id/Login_txt"
                     android:layout_width="match_parent"
@@ -62,28 +73,24 @@
                     android:layout_marginTop="100dp"
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="40dp"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="EMAIL"
-                        android:textSize="13sp"
-                        android:layout_marginStart="3dp"
-                        android:textColor="@color/grey"
-                        android:fontFamily="@font/lato"
-                        />
+                    >
+
                     <EditText
                         android:id="@+id/login_email"
-                        android:layout_marginTop="1dp"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:backgroundTint="@color/grey"
+                        android:ems="10"
+                        android:background="@color/white"
+                        android:paddingStart="10dp"
+                        android:layout_centerVertical="false"
+                        android:hint="Email"
                         android:inputType="textEmailAddress"
-                        />
-                </LinearLayout>
 
-                <LinearLayout
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/password_field"
                     android:layout_below="@+id/email_field"
                     android:layout_width="match_parent"
@@ -91,24 +98,22 @@
                     android:layout_marginTop="30dp"
                     android:layout_marginRight="40dp"
                     android:layout_marginLeft="40dp"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="PASSWORD"
-                        android:layout_marginStart="3dp"
-                        android:textSize="13sp"
-                        android:textColor="@color/grey"
-                        android:fontFamily="@font/lato"/>
+                    android:orientation="vertical"
+                    app:passwordToggleEnabled="true"
+                    >
+
                     <EditText
                         android:id="@+id/login_password"
-                        android:layout_marginTop="1dp"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:textColor="@color/black"
-                        android:backgroundTint="@color/grey"
-                        android:inputType="textPassword"/>
-                </LinearLayout>
+                        android:backgroundTint="@color/white"
+                        android:inputType="textPassword"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:ems="20"
+                        android:hint="Password"/>
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/forgotPassword_btn"
@@ -148,6 +153,7 @@
                     android:textColor="@color/grey"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     />
 
 
