--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -93,5 +93,15 @@
        </LinearLayout>
     </LinearLayout>
 
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:text="logout"
+        tools:layout_editor_absoluteX="158dp"
+        tools:layout_editor_absoluteY="281dp" />
+
 
 </RelativeLayout>
