--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -26,21 +26,23 @@
 
             <RelativeLayout
                 android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/button_backgroynd"
                 android:layout_marginLeft="21dp"
                 android:layout_marginRight="21dp"
+                android:layout_gravity="center"
                 >
 
                 <ImageView
-                    android:layout_width="match_parent"
+                    android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:scaleType="centerInside"
                     android:layout_gravity="center"
+
                     android:src="@mipmap/ic_launcher_foreground"
                     android:id="@+id/image_add"
-                    app:tint="@color/yellow_musterd" />
+                    />
 
             </RelativeLayout>
 
