--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -18,10 +18,14 @@
         android:layout_marginTop="?attr/actionBarSize"
         tools:context=".donate">
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="8dp"
+            android:layout_height="wrap_content"
+            android:paddingBottom="80dp"
+            android:paddingTop="10dp"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -132,6 +136,8 @@
                 android:layout_marginEnd="21dp"
                 android:padding="10dp"
                 android:prompt="@string/categories"
+                android:elevation="2dp"
+                android:textColor="@android:color/black"
                 android:background="@drawable/text_background"
                 />
 
@@ -142,9 +148,10 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="21dp"
                 android:layout_marginEnd="21dp"
+                android:layout_marginBottom="10dp"
                 android:padding="10dp"
                 android:prompt="@string/state"
-
+                android:elevation="2dp"
                 android:background="@drawable/text_background"
                 />
 
@@ -169,6 +176,6 @@
 <!--                />-->
 
         </LinearLayout>
-
+        </ScrollView>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
