--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,6 +20,7 @@
             android:id="@+id/Toolbar"
             android:background="@color/yellow_musterd">
 
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -29,11 +30,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="doNeed"
+                    android:textColor="@color/lightGrey"
                     android:fontFamily="@font/cocogoose"
                     android:layout_centerVertical="true"
                     android:textSize="25sp"
                     android:layout_marginStart="10dp"
                     android:textStyle="bold"/>
+
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="15dp"
+                    android:alpha="0.4"
+                    android:id="@id/logout2"
+                    android:src="@drawable/logout3"
+                    />
+
+
+
 
 
             </RelativeLayout>
@@ -92,6 +108,7 @@
                android:padding="6dp"/>
        </LinearLayout>
     </LinearLayout>
+
 
     <Button
         android:id="@+id/logout"
