--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,40 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-
+    app:backgroundTint="@color/white"
     >
 
 
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:padding="1dp"
         >
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            >
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="1dp">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
                 android:fontFamily="@font/cocogoose"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="600dp"
-                android:text="doNeed"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                app:autoSizeTextType="uniform"
+                android:text="doNeed"
                 android:textColor="#54000000"
-                 />
-        </LinearLayout>
+
+                android:textSize="55sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <androidx.cardview.widget.CardView
@@ -43,127 +48,139 @@
             android:layout_height="match_parent"
             android:layout_marginTop="100dp"
             android:layout_marginBottom="30dp"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
             android:layout_centerHorizontal="true"
             app:cardCornerRadius="38dp"
             android:paddingBottom="10dp"
-            app:cardBackgroundColor="@color/white"
+            app:cardBackgroundColor="@color/yellow_musterd"
             app:cardElevation="10dp">
 
-            <RelativeLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                >
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/Login_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="LOGIN"
-                    android:textSize="41sp"
-                    android:fontFamily="@font/cocogoose"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="30dp"
-                    android:textColor="#504E4E" />
+                    android:layout_marginTop="32dp"
+                    android:fontFamily="@font/cocogoose"
+                    android:text="LOGIN"
+                    android:textColor="#504E4E"
+                    android:textSize="41sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/email_field"
-                    android:layout_below="@+id/Login_txt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="100dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    app:boxStrokeColor="@color/black"
-                    >
+                    android:layout_below="@+id/Login_txt"
+                    android:layout_marginTop="108dp"
+                    android:hint="Email"
+                    app:boxStrokeColor="@color/white"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="true"
+                    app:hintTextColor="@color/darkGrey"
+                    app:layout_constraintTop_toBottomOf="@+id/Login_txt"
+                    tools:layout_editor_absoluteX="0dp">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/login_email"
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
-                        android:textColor="@color/black"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
                         android:ems="10"
-                        android:background="@color/white"
-                        android:paddingStart="10dp"
-                        android:layout_centerVertical="false"
-                        android:hint="Email"
                         android:inputType="textEmailAddress"
+                        android:paddingStart="10dp"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/yellow_musterd"
 
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/password_field"
-                    android:layout_below="@+id/email_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:orientation="vertical"
-                    app:passwordToggleEnabled="true"
-                    >
+                    android:layout_below="@+id/email_field"
+                    android:layout_marginTop="44dp"
+                    android:hint="Password"
+                    app:boxStrokeColor="@color/darkGrey"
+                    app:hintTextColor="@color/darkGrey"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/email_field"
+                    app:layout_constraintTop_toBottomOf="@+id/email_field"
+                    app:passwordToggleEnabled="true">
 
                     <EditText
                         android:id="@+id/login_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:backgroundTint="@color/white"
-                        android:inputType="textPassword"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+
                         android:ems="20"
-                        app:boxStrokeColor="@color/black"
-                        android:hint="Password"/>
+
+                        android:inputType="textPassword"
+                        android:textColor="@color/white"
+                        android:textColorHint="@color/darkGrey" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:id="@+id/forgotPassword_btn"
+
+                    android:id="@+id/txt_signUp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/password_field"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    android:text="Forgot password?"
-                    android:textColor="@color/grey"/>
+                    android:layout_marginTop="20dp"
+                    android:text="Don't have an account? Sign Up."
+
+                    android:textColor="@color/darkGrey"
+                    app:layout_constraintEnd_toEndOf="@+id/password_field"
+                    app:layout_constraintStart_toStartOf="@+id/password_field"
+                    app:layout_constraintTop_toBottomOf="@+id/password_field" />
 
                 <Button
                     android:id="@+id/LoginSubmit_btn"
-                    android:layout_below="@+id/forgotPassword_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="92dp"
                     android:background="@drawable/button1"
-                    android:textSize="25sp"
                     android:fontFamily="@font/cocogoose"
-                    android:textStyle="bold"
                     android:paddingLeft="66dp"
-                    android:paddingRight="66dp"
-                    android:text="Login"
                     android:paddingTop="5dp"
+                    android:paddingRight="66dp"
                     android:paddingBottom="5dp"
-                    android:textColor="#ffff"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="50dp"
-                    />
+                    android:text="Login"
+                    android:textColor="@color/darkGrey"
+                    android:textSize="20sp"
+                    app:backgroundTint="@color/white"
+                    android:textStyle="bold"
 
-                <TextView
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_signUp" />
 
-                    android:layout_below="@+id/LoginSubmit_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Don't have an account? Sign Up."
-                    android:id="@+id/txt_signUp"
-                    android:textColor="@color/grey"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    />
-
-
-            </RelativeLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
