--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="yellow_musterd">#F7C80A</color>
+    <color name="y">#F7C80A</color>
+    <color name="test">#FFBF01</color>
+    <color name="yellow_musterd">#FDC600</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -11,6 +13,7 @@
     <color name="lightGrey">#F2F2F2</color>
     <color name="darkGrey">#707070</color>
     <color name="blue">#1B75B5</color>
+
 </resources>
 
 <!--    <?xml version="1.0" encoding="utf-8"?>-->
