--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,8 +5,8 @@
         <item name="colorPrimary">@color/yellow_musterd</item>
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorOnSurface">#EC1D1D</item>
-
+        <item name="colorOnSurface">#9E9C9C</item>
+        <item name="placeholderTextColor">#ffffff</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
