--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,18 +39,14 @@
 
 
                 <ImageView
+                    android:id="@+id/logout2"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="15dp"
                     android:alpha="0.4"
-                    android:id="@id/logout2"
                     android:src="@drawable/logout3"
                     />
-
-
-
-
 
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
