--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -114,7 +114,8 @@
                 android:id="@+id/recycler_viewhome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp" />
+                android:layout_margin="5dp"
+                android:paddingBottom="20dp"/>
 
         </LinearLayout>
 
